[gd_scene load_steps=6 format=3 uid="uid://dhw1cisqt3abk"]

[ext_resource type="FontFile" uid="uid://pd4m6sabv8ef" path="res://Resources/fonts/PirataOne-Regular.ttf" id="1_ghse5"]
[ext_resource type="Script" path="res://scenes/saved_wizard.gd" id="1_qv3tl"]
[ext_resource type="Texture2D" uid="uid://c6lu8i1cl0dj1" path="res://Resources/images/button_trash_small.svg" id="2_p0q7g"]
[ext_resource type="FontFile" uid="uid://ctkm8hvx6cy57" path="res://Resources/fonts/SourceSans3-It.ttf" id="3_gf7vw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1rs5"]
bg_color = Color(0.176471, 0.356863, 0.411765, 1)

[node name="SavedWizardCard" type="Control"]
custom_minimum_size = Vector2(350, 680)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_qv3tl")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(330, 290)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_n1rs5")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer_Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label_WizardName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Header"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_ghse5")
theme_override_font_sizes/font_size = 28
text = "Munfuglio the Magnificent"
horizontal_alignment = 1

[node name="Button_deleteSaved" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Header"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("2_p0q7g")
flat = true

[node name="Label_WizardSchool" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("3_gf7vw")
text = "Chronomancer"
vertical_alignment = 1

[node name="HBoxContainer_Stats" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats"]
layout_mode = 2

[node name="Label_Move" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Move"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_MoveValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats"]
layout_mode = 2

[node name="Label_Fight" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer2"]
layout_mode = 2
mouse_filter = 1
text = "Fight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_FightValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer2"]
layout_mode = 2
mouse_filter = 1
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats"]
layout_mode = 2

[node name="Label_Shoot" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer3"]
layout_mode = 2
mouse_filter = 1
text = "Shoot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_ShootValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer3"]
layout_mode = 2
mouse_filter = 1
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats"]
layout_mode = 2

[node name="Label_Arm" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer4"]
layout_mode = 2
mouse_filter = 1
text = "Armour"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_ArmValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer4"]
layout_mode = 2
mouse_filter = 1
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer5" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats"]
layout_mode = 2

[node name="Label_Will" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer5"]
layout_mode = 2
mouse_filter = 1
text = "Will"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_WillValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer5"]
layout_mode = 2
mouse_filter = 1
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer6" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats"]
layout_mode = 2

[node name="Label_Health" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer6"]
layout_mode = 2
mouse_filter = 1
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_HealthValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Stats/VBoxContainer6"]
layout_mode = 2
mouse_filter = 1
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_SpellsTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_ghse5")
theme_override_font_sizes/font_size = 18
text = "Known Spells"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer_spellList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label_RosterTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_ghse5")
theme_override_font_sizes/font_size = 18
text = "Warband"
horizontal_alignment = 1

[node name="ScrollContainerRoster" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer_RosterList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainerRoster"]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer_Header/Button_deleteSaved" to="." method="_on_button_delete_saved_pressed"]
